[package]
name = "rekordbox-serato-bridge"
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["xxvw"]
repository = "https://github.com/xxvw/rekordbox-serato-bridge"
description = "Convert and bridge DJ library exports between rekordbox and Serato."
readme = "README.md"

[[bin]]
name = "rsb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
